# pheno-agents-md

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SPEC.md  WORKLOG.md  audit_scorecard.json  deny.toml  justfile  llms.txt
src/: lib.rs  main.rs
src/pheno_agents_md/: __init__.py
tests/: test_smoke.py
